# kryphorix

./: .gitignore  .integrity_key  CHANGELOG.md  README.md  integrity_manifest.json  kryphorix.bat  kryphorix.py  kryphorix.sh  kryphorix_entry.py  pyproject.toml  requirements.txt  setup.py
Kryphorix_v2/: .integrity_key  integrity_manifest.json
assets/: owasp_top10_2025.json
core/: __init__.py  audit_log.py  bootstrap.py  compat.py  config.py  finding.py  findings.py  integrity.py  logger.py  report.py  selftest.py  updater.py  workspace.py
modules/: __init__.py  _base.py  ad.py  api.py  cloud.py  compliance.py  credentials.py  firewall.py  malware.py  network.py  osint.py  owasp.py  ports.py  ssh_audit.py  subdomain.py  tls.py  vuln_ports.py  web.py  wireless.py
plugins/: __init__.py  plugin_loader.py
